tests/purs/passing/ConstraintParsingIssue.purs
module Main where

import Effect.Console

class X a

instance x :: X (List (List a)) => X (List a)

main = log "Done"
